# STL-Viewer

./: .gitignore  CMakeLists.txt  Camera.h  GLError.cpp  GLError.h  Readme.md  STLData.cpp  STLData.h  main.cpp  renderer.cpp  renderer.h  shaders.h  window_GL.cpp  window_GL.h
shaders/: fragment.glsl  vertex.glsl
test/: planeASCII.stl  planeBIN.stl  simpleASCII.stl  simpleBIN.stl  t.txt
